# easypap-project

./: .clang-format  .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  CONTRIBUTING  INSTALL-HOWTO.md  LICENSE  Makefile  README.md  dump.txt  mymachines  run  view
.github/workflows/: static.yml
cmake/: EasypapConfig.cmake.in  FindSCOTCH.cmake  Findcglm.cmake  ezmConfig.cmake.in  ezvConfig.cmake.in
data/: .gitignore  mesh
data/rle/: diehard1398.rle  diehard2474.rle  greyship.rle
data/templates/: kernel_template.c
etape-1/: README
etape-1/evaluation/: 1024  1024.sha256  2048  2048.sha256  512  512.sha256  8192  8192.sha256  check
etape-2/: .gitignore
etape-2/evaluation/: 1024  1024.sha256  2048  2048.sha256  256  8192  8192.sha256  check
etape-3/: README
etape-3/evaluation/: 1024  2048  256  256.sha256  8192  check
etape-4-mpi/: .gitignore
include/: api_funcs.h  arch_flags.h  constants.h  cppdefs.h  cpustat.h  cuda_kernels.h  debug.h  easypap.h  ee.h  energy_monitor.h  events.h  ez_pthread.h  ezp_alloc.h  ezp_ctx.h  ezp_cuda_event.h  ezp_gpu_event.h  ezp_helpers.h  global.h  gmonitor.h  gpu.h  graphics.h  hash.h  hooks.h  img_data.h  mesh_data.h  mesh_mgpu.h  mesh_mgpu_cuda.h  mesh_mgpu_ocl.h  minmax.h  monitoring.h  nvidia_cuda.h  ocl.h  perfcounter.h  pthread_barrier.h  time_macros.h
internal/: hooks.h  nvidia_cuda.h  private_glob.h
kernel/: CMakeLists.txt
kernel/c/: CMakeLists.txt  blur.c  heat3d.c  invert.c  life.c  life_gpu.c  life_helpers.h  life_omp_ocl.c  mandel.c  max.c  pixelize.c  rotation90.c  sable.c  sample.c  sample3d.c  sandPile.c  scrollup.c  skin3d.c  spin.c  stripes.c  transpose.c  tsp.c
kernel/cuda/: CMakeLists.txt  cuda_kernels.cuh  invert.cu  none.cu  pixelize.cu  rotation90.cu  sample.cu  sample3d.cu  scrollup.cu
kernel/mipp/: CMakeLists.txt  invert.cpp
kernel/ocl/: common.cl  common3d.cl  heat3d.cl  invert.cl  (+14 more)
lib/: CMakeLists.txt
lib/ezm/: .gitignore  CMakeLists.txt  Makefile  ezm.pc.in
lib/ezm/apps/: README.MD  run-cmake.sh
lib/ezm/apps/cmake/: FindFXT.cmake
lib/ezm/include/: ezm.h  ezm_footprint.h  ezm_perfmeter.h  ezm_prefix.h  ezm_time.h  ezm_tracerec.h  ezm_types.h
lib/ezm/internal/: ezm_pack.h  ezm_trace_codes.h
lib/ezm/src/: ezm.c  ezm_footprint.c  ezm_perfmeter.c  ezm_prefix.c  ezm_time.c  ezm_tracerec.c
lib/ezm/test/: CMakeLists.txt  README.MD  mandel.c  mesh.c  run-cmake.sh
lib/ezm/test/cmake/: FindSCOTCH.cmake
lib/ezm/view/: CMakeLists.txt  Makefile
lib/ezm/view/include/: mesh.h  trace_data.h  trace_graphics.h
lib/ezm/view/src/: main.c  trace_colors.c  trace_data.c  trace_file.c  trace_graphics.c
lib/ezv/: .gitignore  CMakeLists.txt  Makefile  ezv.pc.in
lib/ezv/apps/: README.MD  diy.c  imagecpu.c  morton.c  part.c  run-cmake.sh
lib/ezv/include/: error.h  ezv.h  ezv_boolmat.h  ezv_ctx.h  ezv_event.h  ezv_hud.h  ezv_img2d.h  ezv_img2d_object.h  ezv_mesh3d.h  ezv_mesh3d_object.h  ezv_mon.h  ezv_palette.h  ezv_prefix.h  ezv_rgba.h  ezv_sdl_gl.h  ezv_shader.h  ezv_virtual.h  img2d_obj.h  img2d_renderer.h  mesh3d_ctx.h  mesh3d_obj.h  mesh3d_renderer.h  mesh3d_shader.h  mon_obj.h
lib/ezv/include/glad/: glad.h
lib/ezv/internal/: ezv_mon_object.h  ezv_shader.h  ezv_textures.h  img2d_renderer.h  mesh3d_renderer.h  mon_renderer.h  tinyobj_loader_c.h
lib/ezv/shaders/: clipping.vs  cpu.gs  cpu_data.gs  cut.gs  hud.vs
lib/ezv/shaders/hud/: backg.vs
lib/ezv/shaders/img2d/: generic.vs  picking.vs
lib/ezv/shaders/mesh3d/: cpu_data.gs
lib/ezv/shaders/mon/: cpu.fs  cpu.vs  generic.vs
lib/ezv/share/ezv/shaders/hud/: backg.vs  hud.fs
lib/ezv/share/ezv/shaders/img2d/: data_rgba_cpu.fs  generic.vs  picking.vs
lib/ezv/share/ezv/shaders/mesh3d/: cut.gs  generic.fs  generic.gs  generic.vs  picking.fs
lib/ezv/share/ezv/shaders/mon/: generic.vs
lib/ezv/share/shaders/hud/: backg.fs  hud.vs
lib/ezv/share/shaders/img2d/: generic.fs  picking.fs
lib/ezv/share/shaders/mesh3d/: clipping.vs  cpu-light.gs  cpu.gs  cpu_data-light.gs  cut.vs  data-light.gs  data.gs  generic.vs
lib/ezv/share/shaders/mon/: cpu.vs
lib/ezv/src/: ezv.c  ezv_boolmat.c  ezv_event.c  ezv_hud.c  ezv_img2d_object.c  ezv_mesh3d_object.c  ezv_mon_object.c  ezv_palette.c  ezv_prefix.c  ezv_sdl_gl.c  ezv_shader.c  ezv_virtual.c  glad.c  img2d_obj.c  img2d_renderer.c  mesh3d_obj.c  mesh3d_palette.c  mesh3d_renderer.c  mesh3d_shader.c  mon_obj.c  mon_renderer.c  stb_image.c
lib/ezv/test/: CMakeLists.txt  README.MD  boolmat.c  cpu.c  diy.c  image.c  imagecpu.c  imagedapu.c  mesh.c  monitor.c  morton.c  paint.c  part.c  patch.c  run-cmake.sh  store.c  thr.c
plots/: Exp.ipynb  easyplot.py  expTools.py  final-opt-speedup.py  generateSpeedUPGraph.py  graphTools.py  heat-256.py  lazy_tile_opt.py  lazy_vs_lazyompfor.py  life-heat-opt.py  life-nb-threads.py  mem-plot.py  mpi_omp.py  mpi_processes.py  omp_places.py  plot-freq-stall.py  plot-watt.py  run-simple.py  run-xp-divergence.py  run-xp-heat-life.py  run-xp-heat-mandel.py  run-xp-life-lazy.py  run-xp-life-lazy.py.old  run-xp-life-thread.py  run-xp-life-tile-opt.py  run-xp-life.py  run-xp-life1.py  run-xp-life2.py  run-xp-life3.py  run-xp-mandel.py  run-xp-rotation.py  run-xp-scrollup.py  run-xp-spin.py  run-xp-thread-life.py  run-xp-tsp.py  runningMandel.py  runningMultipleSeq.py  runningScrollup.py  sample-speedup-plot.py  sample-throughput-plot.py  (+4 more)
script/: build-all  clean-output-files  clean-thumbs  cmake-easypap.sh  cmake-install-ezv-ezm.sh  easypap-common.bash  easypap-completion.bash  easypap-list-gpu-variants  easypap-list-kernels  easypap-list-ocl-variants  easypap-list-variants  easypap-utilities.bash  new-kernel.sh  run-life.sh  run-mandel.sh  run-mpi.sh  small-demo  stage-xp  verifier.py
src/: arch_flags.c  cpustat.c  energy_monitor.c  events.c  ez_pthread.c  ezp_alloc.c  ezp_ctx.c  ezp_cuda_event.cu  ezp_monitoring.c  ezp_ocl_event.c  gmonitor.c  graphics.c  hash.c  hooks.c  img_data.c  main.c  mesh_data.c  mesh_mgpu.c  mesh_mgpu_cuda.cu  mesh_mgpu_ocl.c  nvidia_cuda.cu  ocl.c  perfcounter.c  pthread_barrier.c  rle_lexer.l  scheduler.c
traces/: Makefile
(+45 files in other folders)
